New Banner Photo
pic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ text-align: center;
 }
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url('Content/img/vegetables.jpg');
+    background-image: url('Content/img/Stowe Photo.jpg');
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
