Where can you find us?
Markets

--- a/Markets.html
+++ b/Markets.html
@@ -53,12 +53,12 @@ text-align: center;
 	
 		<div class="row">
 			<div class="col-md-4">
-				<h2>Where can you find us?</h2>
+				<h2>The Juicer</h2>
 				<p>
-					Farmer's Markets in Northern Vermont!
+					A humble juicer. She likes to take it easy, breathe, and be.
 				</p>
 				<p>
-					<a class="btn btn-default" href="markets.html">Learn more &raquo;</a>
+					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
 				</p>
 			</div>
 			<div class="col-md-4">
