--- a/Markets.html
+++ b/Markets.html
@@ -46,8 +46,8 @@ text-align: center;
         </div>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Honeysuckle Juice Co.</h1>
-			<p class="lead">Local juice. #DrinkYerVeg</p>
+			<h1></h1>
+			<p class="lead">#DrinkYerVeg</p>
 			<p><a href="projects.html" class="btn btn-primary btn-lg">Juice</a></p>
 		</div>
 	
