--- a/markets.html
+++ b/markets.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Honeysuckle Juice Co.</title>		
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/readable/bootstrap.min.css" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <style>
 body {
-padding-top: 50px;
+padding-top: 100px;
 text-align: center;
 }
 .jumbotron {
@@ -22,6 +23,11 @@ text-align: center;
     background-repeat: no-repeat;
     color: white;
     text-shadow: black 0.3em 0.3em 0.3em;
+}
+p {
+color:green;}
+.navbar {
+background-color: rgba(122, 244, 65, 0.8);
 }
 </style>
 <body>
@@ -46,19 +52,29 @@ text-align: center;
         </div>
 	<div class="container">
 		<div class="jumbotron">
-			<h1></h1>
-			<p class="lead">#DrinkYerVeg</p>
-			<p><a href="projects.html" class="btn btn-primary btn-lg">Juice</a></p>
+			<h1>Honeysuckle Juice Co.</h1>
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<!-- <p style="color:white" class="lead">#DrinkYerVeg</p> -->
+			<!-- <p><a href="projects.html" class="btn btn-primary btn-lg">Juice</a></p> -->
 		</div>
 	
 		<div class="row">
 			<div class="col-md-4">
-				<h2>The Juicer</h2>
+				<h2>Where can you find us?</h2>
 				<p>
-					A humble juicer. She likes to take it easy, breathe, and be.
+					Farmer's Markets in Northern Vermont!
 				</p>
 				<p>
-					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
+					<a class="btn btn-default" href="markets.html">Learn more &raquo;</a>
 				</p>
 			</div>
 			<div class="col-md-4">
