--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ text-align: center;
 }
 p {
 color:green;}
+.jumbotron h1 {
+font-size: 550%;
+text-shadow: -1px 0 black, 0 3px black, 3px 0 black, 0 -1px black;
+}
 .navbar {
 background-color: rgba(122, 244, 65, 0.8);
 }
@@ -69,7 +73,7 @@ background-color: rgba(122, 244, 65, 0.8);
 	
 		<div class="row">
 			<div class="col-md-4">
-				<h2>Where can you find us?</h2>
+				<h2>Where to find us</h2>
 				<p>
 					Farmer's Markets in Northern Vermont!
 				</p>
@@ -80,16 +84,16 @@ background-color: rgba(122, 244, 65, 0.8);
 			<div class="col-md-4">
 				<h2>The Juice</h2>
 				<p>
-					People have come to afford this juice a mythical status.
+					We're all about local juice! <br />Produce grown locally and pressed right in front of you!
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2>The Places</h2>
+				<h2>Get in touch</h2>
 				<p>
-					Great farmer's markets in Vermont.
+					Check us out on social media or shoot us an e-mail!
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
