--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ text-align: center;
 p {
 color:green;}
 .jumbotron h1 {
-font-size: 550%;
+font-size: 7vw;
 text-shadow: -1px 0 black, 0 3px black, 3px 0 black, 0 -1px black;
 }
 .navbar {
