--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ background-color: rgba(122, 244, 65, 0.8);
 			<div class="col-md-4">
 				<h2>The Juice</h2>
 				<p>
-					We're all about local juice! <br />Produce grown locally and pressed right in front of you!
+					Organic Produce that's grown locally!
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
