--- a/markets.html
+++ b/markets.html
@@ -36,7 +36,7 @@ text-align: center;
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Honeysuckle Juice</a>
+                    <a class="navbar-brand" href="index.html">Honeysuckle Juice Co.</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
