--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ background-color: rgba(125, 222, 72, 0.8);
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Honeysuckle Juice</a>
+                    <a class="navbar-brand" href="index.html">Honeysuckle Juice Co.</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
