--- a/index.html
+++ b/index.html
@@ -73,27 +73,27 @@ background-color: rgba(125, 222, 72, 0.8);
 	
 		<div class="row">
 			<div class="col-md-4">
-				<h2>Where to find us</h2>
+				<h2>Where are we?</h2>
 				<p>
-					Farmer's Markets in Northern Vermont!
+					Farmer's Markets in Northern Vermont.
 				</p>
 				<p>
 					<a class="btn btn-default" href="markets.html">Learn more &raquo;</a>
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2>The Juice</h2>
+				<h2>The Juice!</h2>
 				<p>
-					Organic Produce that's grown locally!
+					Nothin' but Organic Produce.
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2>Get in touch</h2>
+				<h2>Get in touch!</h2>
 				<p>
-					Check us out on social media or shoot us an e-mail!
+					Check us out on social media.
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
