--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ background-color: rgba(125, 222, 72, 0.8);
 			<div class="col-md-4">
 				<h2>The Juice!</h2>
 				<p>
-					Nothin' but Organic Produce.
+					Nothin' but Organic Produce... in liquid form. 
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
