--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ background-color: rgba(125, 222, 72, 0.8);
 	
 		<div class="row">
 			<div class="col-md-4">
-				<h2>Where are we?</h2>
+				<h2>Locations!</h2>
 				<p>
 					Farmer's Markets in Northern Vermont.
 				</p>
@@ -82,7 +82,7 @@ background-color: rgba(125, 222, 72, 0.8);
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2>The Juice!</h2>
+				<h2>The juice!</h2>
 				<p>
 					Nothin' but Organic Produce... in liquid form. 
 				</p>
@@ -91,9 +91,9 @@ background-color: rgba(125, 222, 72, 0.8);
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2>Get in touch!</h2>
+				<h2>The 'gram!</h2>
 				<p>
-					Check us out on social media.
+					Check us out or get in touch.
 				</p>
 				<p>
 					<a class="btn btn-default" href="projects.html">Learn more &raquo;</a>
