--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ text-shadow: -1px 0 black, 0 3px black, 3px 0 black, 0 -1px black;
 .navbar {
 background-color: rgba(125, 222, 72, 0.8);
 }
+.navbar { 
+<img src="img_translogo.png" alt="translogo">;
+}
 </style>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
