--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Honeysuckle Juice Co.</title>		
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/readable/bootstrap.min.css" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <style>
+.navbar {
+background-color: rgba(125, 222, 72, 0.8);
+}
 body {
 padding-top: 100px;
 text-align: center;
@@ -23,15 +25,6 @@ text-align: center;
     background-repeat: no-repeat;
     color: white;
     text-shadow: black 0.3em 0.3em 0.3em;
-}
-p {
-color:green;}
-.jumbotron h1 {
-font-size: 6vw;
-text-shadow: -1px 0 black, 0 3px black, 3px 0 black, 0 -1px black;
-}
-.navbar {
-background-color: rgba(125, 222, 72, 0.8);
 }
 </style>
 <body>
@@ -48,58 +41,28 @@ background-color: rgba(125, 222, 72, 0.8);
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="juice.html">Juice</a></li>						
+                        <li><a href="projects.html">Juice</a></li>						
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 	<div class="container">
-		<div class="jumbotron">
-			<h1>Honeysuckle Juice Co.</h1>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<!-- <p style="color:white" class="lead">#DrinkYerVeg</p> -->
-			<!-- <p><a href="projects.html" class="btn btn-primary btn-lg">Juice</a></p> -->
-		</div>
-	
 		<div class="row">
-			<div class="col-md-4">
-				<h2>Locations!</h2>
-				<p>
-					Farmer's Markets in Northern Vermont.
-				</p>
-				<p>
-					<a class="btn btn-default" href="markets.html">Learn more &raquo;</a>
-				</p>
+			<div class="col-md-6">
+				<h2>Waitsfield Farmer's Market</h2>
+				<p>Saturdays from 9am-1pm!</p>
 			</div>
-			<div class="col-md-4">
-				<h2>The juice!</h2>
-				<p>
-					Nothin' but Organic Produce... in liquid form. 
-				</p>
-				<p>
-					<a class="btn btn-default" href="juice.html">Learn more &raquo;</a>
-				</p>
+			<div class="col-md-6">
+				<h2>Stowe Farmer's Market</h2>
+				<p>Sundays from 10am-3pm!</p>
 			</div>
-			<div class="col-md-4">
-				<h2>The 'gram!</h2>
-				<p>
-					Check us out or get in touch.
-				</p>
-				<p>
-					<a class="btn btn-default" href="contact.html">Learn more &raquo;</a>
-				</p>
-			</div>
-		</div>
+		<!-- <div class="jumbotron"> -->
+			<!-- <h1></h1> -->
+			<!-- <p class="lead">#DrinkYerVeg</p> -->
+			<!-- <p><a href="projects.html" class="btn btn-primary btn-lg">Juice</a></p> -->
+		<!-- </div> -->
+</div>
 	</div>
 	<div class="container body-content">
             <hr />
