--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,11 @@ text-align: center;
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h2>Waitsfield Farmer's Market</h2>
-				<p>Saturdays from 9am-1pm!</p>
+				<h2><a href=https://www.facebook.com/honeysucklejuiceco/?ref=aymt_homepage_panel>facebook</a></h2>
+				<h2><a href=https://www.instagram.com/honeysucklejuiceco/>instagram</a></h2>
 			</div>
 			<div class="col-md-6">
-				<h2>Stowe Farmer's Market</h2>
-				<p>Sundays from 10am-3pm!</p>
+				<h2><a href="mailto:honeysucklejuiceco@gmail.com?subject=subject&cc=cc@example.com">contact emily!</a></h2>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
