--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ text-align: center;
 				<h2><a href=https://www.instagram.com/honeysucklejuiceco/>instagram</a></h2>
 			</div>
 			<div class="col-md-6">
-				<h2><a href="mailto:honeysucklejuiceco@gmail.com?subject=subject&cc=cc@example.com">contact emily!</a></h2>
+				<h2><a href="mailto:honeysucklejuiceco@gmail.com?subject=subject">contact emily!</a></h2>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
