--- a/juice.html
+++ b/juice.html
@@ -48,14 +48,8 @@ text-align: center;
             </div>
         </div>
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Waitsfield Farmer's Market</h2>
-				<p>Saturdays from 9am-1pm!</p>
-			</div>
-			<div class="col-md-6">
-				<h2>Stowe Farmer's Market</h2>
-				<p>Sundays from 10am-3pm!</p>
+				<h2>Local & Organic Juice</h2>
+				<p>our juice is freshly pressed right in front of your eyes from veggies that were grown by our friends, not bottled and shipped all over the country. by supporting HJC, you are supporting hard-working farmers, who care about supporting organic agriculture and your health. you can take comfort in knowing the produce in your juice is 100% organic and literally picked within days of the market.</p>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
