--- a/juice.html
+++ b/juice.html
@@ -26,6 +26,7 @@ text-align: center;
     color: white;
     text-shadow: black 0.3em 0.3em 0.3em;
 }
+
 </style>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -50,6 +51,7 @@ text-align: center;
 	<div class="container">
 				<h2>Local & Organic Juice</h2>
 				<p>our juice is freshly pressed right in front of your eyes from veggies that were grown by our friends, not bottled and shipped all over the country. by supporting HJC, you are supporting hard-working farmers, who care about supporting organic agriculture and your health. you can take comfort in knowing the produce in your juice is 100% organic and literally picked within days of the market.</p>
+				<p><img src="translogo.PNG" alt="Flowers in Chania" width="700" height="300"></p>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
