--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ background-color: rgba(125, 222, 72, 0.8);
         </div>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Honeysuckle Juice Co.</h1>
+			<br />
+			<br />
+			<br />
 			<br />
 			<br />
 			<br />
@@ -104,6 +106,7 @@ background-color: rgba(125, 222, 72, 0.8);
 	<div class="container body-content">
             <hr />
             <footer>
+				<p><img src="translogo.PNG" alt="Flowers in Chania" width="700" height="300"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
