--- a/markets.html
+++ b/markets.html
@@ -48,6 +48,10 @@ text-align: center;
             </div>
         </div>
 	<div class="container">
+			<br />
+			<br />	
+			<br />
+			<br />
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Waitsfield Farmer's Market</h2>
@@ -67,6 +71,7 @@ text-align: center;
 	<div class="container body-content">
             <hr />
             <footer>
+				<p><img src="translogo.PNG" alt="Flowers in Chania" width="700" height="300"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
