--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@ text-align: center;
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="projects.html">Juice</a></li>						
+                        <li><a href="juice.html">Juice</a></li>						
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
