--- a/markets.html
+++ b/markets.html
@@ -71,7 +71,7 @@ text-align: center;
 	<div class="container body-content">
             <hr />
             <footer>
-				<p><img src="translogo.PNG" alt="Flowers in Chania" width="700" height="300"></p>
+				<p><img src="circlelogo.png" alt="logo" width="700" height="300"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
