--- a/juice.html
+++ b/juice.html
@@ -42,7 +42,7 @@ text-align: center;
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="projects.html">Juice</a></li>						
+                        <li><a href="juice.html">Juice</a></li>						
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -50,8 +50,8 @@ text-align: center;
         </div>
 	<div class="container">
 				<h2>Local & Organic Juice</h2>
-				<p>our juice is freshly pressed right in front of your eyes from veggies that were grown by our friends, not bottled and shipped all over the country. by supporting HJC, you are supporting hard-working farmers, who care about supporting organic agriculture and your health. you can take comfort in knowing the produce in your juice is 100% organic and literally picked within days of the market.</p>
-				<p><img src="translogo.PNG" alt="Flowers in Chania" width="700" height="300"></p>
+				<p>Our juice is freshly pressed right in front of your eyes from veggies that were grown by farmers in the area, not bottled and shipped all over the country. By supporting HJC, you are supporting hard-working folks, who care about supporting organic agriculture and your health. You can take comfort in knowing the produce in your juice is 100% organic and literally picked within days of the market.</p>
+				<p><img src="circlelogo.png" alt="logo" width="700" height="300"></p>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
