--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@ text-align: center;
 	<div class="container body-content">
             <hr />
             <footer>
-				<p><img src="img/longlogo.png" alt="Flowers in Chania" width="700" height="300"></p>
+				<p><img src="Content/img/longlogo.png" alt="Flowers in Chania" width="50%"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
