--- a/juice.html
+++ b/juice.html
@@ -51,7 +51,7 @@ text-align: center;
 	<div class="container">
 				<h2>Local & Organic Juice</h2>
 				<p>Our juice is freshly pressed right in front of your eyes from veggies that were grown by farmers in the area, not bottled and shipped all over the country. By supporting HJC, you are supporting hard-working folks, who care about supporting organic agriculture and your health. You can take comfort in knowing the produce in your juice is 100% organic and literally picked within days of the market.</p>
-				<p><img src="Content/img/circlelogo.png" alt="logo" width="30%"></p>
+				<p><img src="Content/img/circlelogo.png" alt="logo" style="max-width:400px;" width="100%;"></p>
 			</div>
 		<!-- <div class="jumbotron"> -->
 			<!-- <h1></h1> -->
