--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ background-color: rgba(125, 222, 72, 0.8);
 	<div class="container body-content">
             <hr />
             <footer>
-				<p><img src="Content/img/longlogo.png" alt="longlogo" width="50%"></p>
+				<p><img src="Content/img/longlogo.png" alt="longlogo" style="max-width:700px;" width="100%;"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
