--- a/markets.html
+++ b/markets.html
@@ -71,7 +71,7 @@ text-align: center;
 	<div class="container body-content">
             <hr />
             <footer>
-				<p><img src="Content/img/longlogo.png" alt="circlelogo" width="50%"></p>
+				<p><img src="Content/img/longlogo.png" alt="circlelogo" style="max-width:700px;" width="100%;"></p>
                 <p>&copy; 2018 - Honeysuckle Juice Co.</p>
             </footer>
 	</div>
